here are all my plotly plots

--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -50,3 +50,32 @@ nyc_airbnb_df |>
   )
 ```
 
+
+Let's make a boxplot
+
+```{r}
+nyc_airbnb_df |> 
+  mutate(
+    neighbourhood = fct_reorder(neighbourhood, price)
+  ) |> 
+  plot_ly(
+    x = ~neighbourhood, y = ~price, color = ~neighbourhood, 
+    type = "box", colors = "viridis"
+  )
+```
+
+
+Maybe barcharts next?
+
+```{r}
+nyc_airbnb_df |> 
+  count(neighbourhood) |> 
+  mutate(
+    neighbourhood = fct_reorder(neighbourhood, n)
+  ) |> 
+  plot_ly(
+    x = ~neighbourhood, y = ~n,
+    type = "bar"
+  )
+```
+
